[project]
name = "llm-chain"
version = "0.1.0"
description = "RAG application using LangChain and LangGraph"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "langchain>=0.1.0",
    "langchain-google-vertexai",
    "langchain-chroma",
    "langchain-community",
    "langgraph",
    "beautifulsoup4",
    "typing-extensions",
    "chromadb",
    "requests",
    "scrapy",
    "urllib3"
]

[tool.poetry]
packages = [{include = "llm_chain", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
